# fastapi

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  migrations_config.py  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0c63707ab863_teste_delete_column_slug.py  2f1580b388cd_created_user_model.py  46d883683e4c_fixed_user_model.py  65556f2f3265_created_product_model.py  72c798424f1e_teste_recriado_column_slug.py  d552c045f658_teste.py  f0b9f75c3ed3_fixed_user_model.py
app/routes/: category_routes.py  deps.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/test/: Insomnia.json  conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_category.py  test_product.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_case.py
app/use_cases/: category.py  product.py  user.py
